chamber/styles/discover-base.css
* {
    --primary-color: #1C2C4B;
    --secondary-color: #1C75BB;
    --background-color: #959595 ;
    --accent-color: #F3BE3C;
    --text-color: #414042;
    --alternative-text-color: #fff;
    --footer-color: #dadada;

    font-family: 'Fira Sans', sans-serif;

}

/* MAIN */

main{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    /* background-color: var(--accent-color); */
}

/* Hero */

#hero {
    display: flex;
    position: relative;
    /* background-color: aquamarine; */
    justify-content: center;
    /* overflow: hidden; */
    /* This margin applies to the whole hero */
    margin: 0; /*Nothing for now...*/
}

#hero::before{

    /* Apply a shadow layer over the image */
    content: "";
    position: absolute;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    background-color: rgba(0, 0, 0, .5);
}

#hero img{
    object-fit: contain;
    max-width: 100%;
    max-height: 100%;
}


.hero-text{
    position: absolute;
    top: 30%;
    /* left: 50%; */
    /* transform: translate(-50%, -95%); */
    text-align: center;
    color: #fff;
    padding: .5rem;
    

}

#lastVisited{
    display: inline-block;
    background-color: var(--accent-color);
    color: var(--text-color);
    padding:.5em;
    margin: .5rem;
}

/* End hero */

section{
    background-color: #fff;
}

/* Demographics card */

#demographics-cards{
    /* display: grid; */
    /* max-height: 30em; */


    /* This aligns the containers */
    /* align-items: center;
    justify-content: center; */
    /* gap: 2em; */
    

    overflow: hidden;
    max-height: 30em;
    transition: max-height 0.5s ease-out;
}

#demographics-cards.open{
    max-height: 200em; /*Sadly fit-content doesn't work for transitions :(*/
}

.title{
    text-align: center;
    width: 100%;
    margin: 1em auto ;
    padding: .5rem;
    font-size: 1.5em;
    font-weight: bold;
    /* background-color: var(--text-color); */
    background-color: var(--secondary-color);
    /* background-color: var(--primary-color); */
    color: var(--alternative-text-color);
}

.demo-card{
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    text-align: justify;
    margin: 1.5em ;
    border: 5px solid var(--accent-color);
        border-radius: 1rem;
        padding: 1rem;
    
}

.demo-card h2{
    text-align: center;
    margin: 1em 0;
}

.button-wrap{
    width: 100%;
    text-align: center;
    padding: .5rem;
}

.dem-button{
    background-color: var(--accent-color);
    font-size: 2.5rem;
    background-color: rgba(0, 0, 0, .1);
    padding: .2em 1rem;
    border: none;
}

.expand{
    background-color: var(--text-color);
    color: var(--accent-color);
    margin: 1em auto;
    width: 7rem;
    padding: .4em;


}



/* Demographics card end */

/* visit-cards */

#visit-cards{
    width: 100%;
}

.carousel {
    width: 100%;
    height: 35rem;
    position: relative;
}

.carousel > ul{
    margin: 0;
    padding: 0;
    list-style: none;
}

.slide {
    position: absolute;
    inset: 0;
    opacity: 0;
    transition:  200ms opacity ease-in-out;
    /* transition-delay: 200ms; */
    text-align: center;
}


.slide > img{
    display: block;
    width: 100%;
    height: 50%;
    object-fit: cover;
    object-position: center;
}

.slide h3{
    margin: 1rem 0 0 ;
}

.slide > p{
    padding: 1rem;
    text-align: justify;
}

.slide > p:last-child{
    text-decoration: underline;
    text-align: center;
    font-weight: bold;
}

.slide[data-active] {
    opacity: 1;
    z-index: 1;
    transition-delay: 0ms;
}


.carousel-button{
    position: absolute;
    background: none;
    border: none;
    z-index: 5;
    font-size: 4rem;
    top: 30%;
    transform: translateY(-50%);
    color: rgba(255,255,255, .5);
    cursor: pointer;
    border-radius: .25rem;
    padding: 0 .5rem;
    background-color: rgba(0, 0, 0, .1);
}

.carousel-button:hover,
.carousel-button:focus {
    color: white;
    background-color: rgba(0, 0, 0, 0.2);
}

.carousel-button:focus{
    outline: 1px solid black;
}

.carousel-button.prev{
    left: 1rem;
}
.carousel-button.next{
    right: 1rem;
}

/* Carousel end */

/* event-cards */

#events-cards{
    margin: 1em 0;
}

.event{
    display: grid;

    text-align: center;
    margin: 1rem;
    background-color: var(--accent-color);
    overflow: hidden;
    border-radius: .5rem;

    grid-template-areas: 
    'name'
    'picture'
    'address'
    'description'
    'button';
}

.event h2{
    margin: 1rem 0;
    grid-area: name;
}

.event figure{
    grid-area: picture;
}

.event figure img{
    width: 100%;
    height: 100%;
    object-fit: cover;
    object-position: center;
}

.event address{
    grid-area: address;
    font-weight: bold;
    margin: 1rem 0;
}

.event p{
    margin: 1rem;
    grid-area: description;
    text-align: justify;
    font-weight: 300;
}

.event button{
    grid-area: button;

    border-radius: .2rem;
    width: 10rem;
    height: 3rem;
    margin: 2rem auto;
    box-shadow: 5px 5px 10px 0 black;

    background-color: var(--text-color);
    color: var(--alternative-text-color);
    border: none;
    cursor: pointer;
}

